--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-slate
 title: [k8s.community]
 description: [Про Kubernetes по-русски]
+github:
+  repository_url: https://github.com/k8s-community
